--- a/smart_network/localbox/localbox.vcxproj.filters
+++ b/smart_network/localbox/localbox.vcxproj.filters
@@ -16,6 +16,7 @@
     <ClCompile Include="localbox.cpp" />
     <ClCompile Include="template_factory.cpp" />
     <ClCompile Include="environ.cpp" />
+    <ClCompile Include="http_message_impl.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main_ui_channel.h" />
@@ -34,5 +35,8 @@
     <ClInclude Include="localbox.h" />
     <ClInclude Include="template_factory.h" />
     <ClInclude Include="environ.h" />
+    <ClInclude Include="http_message.h" />
+    <ClInclude Include="http_forward.h" />
+    <ClInclude Include="http_message_impl.h" />
   </ItemGroup>
 </Project>
