--- a/smart_network/localbox/localbox.vcxproj
+++ b/smart_network/localbox/localbox.vcxproj
@@ -91,6 +91,9 @@
     <ClCompile Include="http_response_template.cpp" />
     <ClCompile Include="http_server.cpp" />
     <ClCompile Include="http_server_template.cpp" />
+    <ClCompile Include="http_websocket.cpp" />
+    <ClCompile Include="http_websocket_manager.cpp" />
+    <ClCompile Include="http_websocket_template.cpp" />
     <ClCompile Include="localbox.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="main_ui_channel.cpp" />
@@ -112,6 +115,9 @@
     <ClInclude Include="http_response_template.h" />
     <ClInclude Include="http_server.h" />
     <ClInclude Include="http_server_template.h" />
+    <ClInclude Include="http_websocket.h" />
+    <ClInclude Include="http_websocket_manager.h" />
+    <ClInclude Include="http_websocket_template.h" />
     <ClInclude Include="localbox.h" />
     <ClInclude Include="main_ui_channel.h" />
     <ClInclude Include="sample.h" />
