--- a/smart_network/localbox/localbox.vcxproj
+++ b/smart_network/localbox/localbox.vcxproj
@@ -87,11 +87,11 @@
     <ClCompile Include="http_message_impl.cpp" />
     <ClCompile Include="http_request.cpp" />
     <ClCompile Include="http_request_template.cpp" />
-    <ClCompile Include="http_response.cpp" />
+    <ClCompile Include="http_response_impl.cpp" />
     <ClCompile Include="http_response_template.cpp" />
     <ClCompile Include="http_server.cpp" />
     <ClCompile Include="http_server_template.cpp" />
-    <ClCompile Include="http_websocket.cpp" />
+    <ClCompile Include="http_websocket_impl.cpp" />
     <ClCompile Include="http_websocket_manager.cpp" />
     <ClCompile Include="http_websocket_template.cpp" />
     <ClCompile Include="localbox.cpp" />
@@ -112,10 +112,12 @@
     <ClInclude Include="http_request.h" />
     <ClInclude Include="http_request_template.h" />
     <ClInclude Include="http_response.h" />
+    <ClInclude Include="http_response_impl.h" />
     <ClInclude Include="http_response_template.h" />
     <ClInclude Include="http_server.h" />
     <ClInclude Include="http_server_template.h" />
     <ClInclude Include="http_websocket.h" />
+    <ClInclude Include="http_websocket_impl.h" />
     <ClInclude Include="http_websocket_manager.h" />
     <ClInclude Include="http_websocket_template.h" />
     <ClInclude Include="localbox.h" />
