--- a/smart_network/localbox/localbox.vcxproj
+++ b/smart_network/localbox/localbox.vcxproj
@@ -82,8 +82,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="basebox\channel.cpp" />
+    <ClCompile Include="basebox\device.cpp" />
+    <ClCompile Include="basebox\environ.cpp" />
+    <ClCompile Include="basebox\service.cpp" />
+    <ClCompile Include="basebox\service_broker_impl.cpp" />
+    <ClCompile Include="basebox\template_factory.cpp" />
     <ClCompile Include="base\ref_implement.cpp" />
-    <ClCompile Include="environ.cpp" />
+    <ClCompile Include="base_object\channel_template.cpp" />
+    <ClCompile Include="base_object\device_template.cpp" />
+    <ClCompile Include="base_object\service_template.cpp" />
     <ClCompile Include="frontend\http_message_impl.cpp" />
     <ClCompile Include="frontend\http_object_template.cpp" />
     <ClCompile Include="frontend\http_request.cpp" />
@@ -95,21 +103,28 @@
     <ClCompile Include="frontend\http_websocket_impl.cpp" />
     <ClCompile Include="frontend\http_websocket_manager.cpp" />
     <ClCompile Include="frontend\http_websocket_template.cpp" />
-    <ClCompile Include="http.cpp" />
-    <ClCompile Include="http_server_template.cpp" />
     <ClCompile Include="localbox.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="main_ui_channel.cpp" />
     <ClCompile Include="sample.cpp" />
-    <ClCompile Include="service_broker_impl.cpp" />
     <ClCompile Include="storage.cpp" />
-    <ClCompile Include="template_factory.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="basebox\channel.h" />
+    <ClInclude Include="basebox\channel_ref.h" />
+    <ClInclude Include="basebox\device.h" />
+    <ClInclude Include="basebox\device_ref.h" />
+    <ClInclude Include="basebox\environ.h" />
+    <ClInclude Include="basebox\service.h" />
+    <ClInclude Include="basebox\service_broker.h" />
+    <ClInclude Include="basebox\service_broker_impl.h" />
+    <ClInclude Include="basebox\service_ref.h" />
+    <ClInclude Include="basebox\template_factory.h" />
     <ClInclude Include="base\ref_implement.h" />
     <ClInclude Include="base\ref_object.h" />
-    <ClInclude Include="channel.h" />
-    <ClInclude Include="environ.h" />
+    <ClInclude Include="base_object\channel_template.h" />
+    <ClInclude Include="base_object\device_template.h" />
+    <ClInclude Include="base_object\service_template.h" />
     <ClInclude Include="frontend\http_forward.h" />
     <ClInclude Include="frontend\http_message.h" />
     <ClInclude Include="frontend\http_message_impl.h" />
@@ -125,14 +140,10 @@
     <ClInclude Include="frontend\http_websocket_impl.h" />
     <ClInclude Include="frontend\http_websocket_manager.h" />
     <ClInclude Include="frontend\http_websocket_template.h" />
-    <ClInclude Include="http.h" />
     <ClInclude Include="localbox.h" />
     <ClInclude Include="main_ui_channel.h" />
     <ClInclude Include="sample.h" />
-    <ClInclude Include="service_broker.h" />
-    <ClInclude Include="service_broker_impl.h" />
     <ClInclude Include="storage.h" />
-    <ClInclude Include="template_factory.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\mongoose\mongoose.vcxproj">
