--- a/smart_network/localbox/localbox.vcxproj.filters
+++ b/smart_network/localbox/localbox.vcxproj.filters
@@ -3,13 +3,9 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="main_ui_channel.cpp" />
-    <ClCompile Include="http.cpp" />
-    <ClCompile Include="service_broker_impl.cpp" />
     <ClCompile Include="sample.cpp" />
     <ClCompile Include="storage.cpp" />
     <ClCompile Include="localbox.cpp" />
-    <ClCompile Include="template_factory.cpp" />
-    <ClCompile Include="environ.cpp" />
     <ClCompile Include="frontend\http_object_template.cpp">
       <Filter>frontend</Filter>
     </ClCompile>
@@ -43,22 +39,42 @@
     <ClCompile Include="frontend\http_request.cpp">
       <Filter>frontend</Filter>
     </ClCompile>
-    <ClCompile Include="http_server_template.cpp" />
     <ClCompile Include="frontend\http_server.cpp">
       <Filter>frontend</Filter>
+    </ClCompile>
+    <ClCompile Include="base_object\service_template.cpp">
+      <Filter>base_object</Filter>
+    </ClCompile>
+    <ClCompile Include="basebox\template_factory.cpp">
+      <Filter>basebox</Filter>
+    </ClCompile>
+    <ClCompile Include="basebox\environ.cpp">
+      <Filter>basebox</Filter>
+    </ClCompile>
+    <ClCompile Include="basebox\service_broker_impl.cpp">
+      <Filter>basebox</Filter>
+    </ClCompile>
+    <ClCompile Include="basebox\device.cpp">
+      <Filter>basebox</Filter>
+    </ClCompile>
+    <ClCompile Include="basebox\service.cpp">
+      <Filter>basebox</Filter>
+    </ClCompile>
+    <ClCompile Include="base_object\device_template.cpp">
+      <Filter>base_object</Filter>
+    </ClCompile>
+    <ClCompile Include="basebox\channel.cpp">
+      <Filter>basebox</Filter>
+    </ClCompile>
+    <ClCompile Include="base_object\channel_template.cpp">
+      <Filter>base_object</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main_ui_channel.h" />
-    <ClInclude Include="channel.h" />
-    <ClInclude Include="http.h" />
-    <ClInclude Include="service_broker_impl.h" />
-    <ClInclude Include="service_broker.h" />
     <ClInclude Include="sample.h" />
     <ClInclude Include="storage.h" />
     <ClInclude Include="localbox.h" />
-    <ClInclude Include="template_factory.h" />
-    <ClInclude Include="environ.h" />
     <ClInclude Include="frontend\http_object_template.h">
       <Filter>frontend</Filter>
     </ClInclude>
@@ -110,6 +126,45 @@
     <ClInclude Include="frontend\http_server.h">
       <Filter>frontend</Filter>
     </ClInclude>
+    <ClInclude Include="base_object\service_template.h">
+      <Filter>base_object</Filter>
+    </ClInclude>
+    <ClInclude Include="basebox\environ.h">
+      <Filter>basebox</Filter>
+    </ClInclude>
+    <ClInclude Include="basebox\template_factory.h">
+      <Filter>basebox</Filter>
+    </ClInclude>
+    <ClInclude Include="basebox\service_broker.h">
+      <Filter>basebox</Filter>
+    </ClInclude>
+    <ClInclude Include="basebox\service_broker_impl.h">
+      <Filter>basebox</Filter>
+    </ClInclude>
+    <ClInclude Include="basebox\device.h">
+      <Filter>basebox</Filter>
+    </ClInclude>
+    <ClInclude Include="basebox\device_ref.h">
+      <Filter>basebox</Filter>
+    </ClInclude>
+    <ClInclude Include="basebox\service.h">
+      <Filter>basebox</Filter>
+    </ClInclude>
+    <ClInclude Include="basebox\service_ref.h">
+      <Filter>basebox</Filter>
+    </ClInclude>
+    <ClInclude Include="base_object\device_template.h">
+      <Filter>base_object</Filter>
+    </ClInclude>
+    <ClInclude Include="basebox\channel.h">
+      <Filter>basebox</Filter>
+    </ClInclude>
+    <ClInclude Include="basebox\channel_ref.h">
+      <Filter>basebox</Filter>
+    </ClInclude>
+    <ClInclude Include="base_object\channel_template.h">
+      <Filter>base_object</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="base">
@@ -117,6 +172,12 @@
     </Filter>
     <Filter Include="frontend">
       <UniqueIdentifier>{4ef6ddbb-3959-4564-89c0-884cbbd60739}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="base_object">
+      <UniqueIdentifier>{7a58b962-1c9f-4e9a-8ce8-8423f6434031}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="basebox">
+      <UniqueIdentifier>{fb29eb0e-071d-4fe9-8d09-74d1f9ec6991}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
