--- a/smart_network/localbox/localbox.vcxproj.filters
+++ b/smart_network/localbox/localbox.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="base_object\channel_template.cpp">
       <Filter>base_object</Filter>
     </ClCompile>
+    <ClCompile Include="base_object\file_object.cpp">
+      <Filter>base_object</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main_ui_channel.h" />
@@ -163,6 +166,9 @@
       <Filter>basebox</Filter>
     </ClInclude>
     <ClInclude Include="base_object\channel_template.h">
+      <Filter>base_object</Filter>
+    </ClInclude>
+    <ClInclude Include="base_object\file_object.h">
       <Filter>base_object</Filter>
     </ClInclude>
   </ItemGroup>
